@@ -77,6 +77,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15546: Fix handling of pathological input data in the read1() method of
+  the BZ2File, GzipFile and LZMAFile classes.
+
 - Issue #13052: Fix IDLE crashing when replace string in Search/Replace dialog
   ended with '\'. Patch by Roger Serwy.
 
